syntax modify and ceph-deploy

--- a/_posts/2015-03-04-LVM.md
+++ b/_posts/2015-03-04-LVM.md
@@ -49,6 +49,7 @@ Ceph的单机版本部署参考[博客](http://blog.coolceph.com/?p=85)，为集
     sudo resize2fs /dev/ceph/osd.0
 
     注意
+    
     * resize2fs 工具只适用于 `ext2、ext3、ext4` .
     * xfs 系统可以使用 xfs_growfs
     * btrfs系统可以使用 `sudo btrfs filesystem resize [+/-]<newsize>[gkm]|max <path>` ，其中<path>为挂在后的路径
@@ -60,7 +61,7 @@ lvremove [选项] [参数]
 
 * 选项
     
--f 强制伤处
+-f 强制删除
 
 * 参数
 
