--- a/_posts/2015-02-21-sublime.md
+++ b/_posts/2015-02-21-sublime.md
@@ -3,6 +3,10 @@ title: Sublime相关
 tags: sublime
 ---  
 
+记录使用sublime遇到的问题。
+
+<!--more-->
+
 ## 安装
     sudo add-apt-repository ppa:webupd8team/sublime-text-2
     sudo apt-get update
