--- a/_posts/2015-03-04-LVM.md
+++ b/_posts/2015-03-04-LVM.md
@@ -1,11 +1,12 @@
 ---
 title: Linux LVM逻辑卷的配置
-tags: linux,lvm
+tags: lvm
 ---
 
 LVM全程Logical Volume Manager 逻辑卷管理器，是Linux对磁盘分区进行管理的一种机制，是建立在硬盘和分区之上、文件系统之下的一个逻辑层，可提高磁盘分区管理的灵活性。
 要创建逻辑卷，首先要创建物理卷PV（Physical Volume），然后卷组VG（Volume Group），最后逻辑卷LV（Logical Volume）。
 
+<!--more-->
 
 Ceph的单机版本部署参考[博客](http://blog.coolceph.com/?p=85)，为集群准备OSD空间。
 注意，分配的OSD空间要大于配置文件Ceph.conf中 `osd journal size`  ，单位为MB。
