--- a/_posts/2015-07-21-ceph-rpm.md
+++ b/_posts/2015-07-21-ceph-rpm.md
@@ -1,10 +1,13 @@
 --- 
 title: Ceph源码构建并安装
+tags: ceph
 ---
 
 如果需要要修改Ceph源码，就要自己构建安装包，然后指定ceph-deploy的安装源。
 本文主要介绍从git上clone源码，然后用rpmbuild打包，最后用ceph-deploy安装。
 环境为Centos，ceph版本0.94.2(hammer)，不同版本的文件稍微有点不一样。
+
+<!--more-->
 
 RPM打包
 ---
